# claude-config

./: .agnix.toml  .aiignore  .claudeignore  .claudelint.yaml  .claudelintrc.json  .clineignore  .cursorindexingignore  .dockerignore  .editorconfig  .gitattributes  .gitignore  .hadolint.yaml  .ignore  .kilocodeignore  .kilocodemodes  .markdownlint.yaml  .mdformat.toml  .oxfmtrc.jsonc  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .prettierrc  .repomixignore  .tmux.conf  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LLM_CONFIG_STANDARDS.md  PLAN.md  README.md  SETUP.md  TODO.md  TODO_AUDIT_REPORT.md  biome.json  claude-cleanup.sh  cleanup.py  cleanup.sh  code_review_input.txt  commit_msg.txt  llm-tmux.ps1  llm-tmux.sh  (+20 more)
.claude/: README.md  config.json  settings.json
.claude-plugin/: marketplace.json
.claude/agents/: code-simplifier.md  general-purpose.md  language-expert.md  optimizer.md  prd.md  skill-auditor.md
.claude/commands/: docs.md  format.md
.claude/context/: project_context.md
.claude/prompts/: coding_assistant.md  data_analyst.md  technical_writer.md
.claude/rules/: skills.md
.claude/settings/: api_settings.example.json  conversation_settings.json
.clinerules/: docs.md
.gemini/: config.json  config.yaml  settings.json
.github/: copilot-instructions.md  dependabot.yml
.github/instructions/: agent-docs.instructions.md  python.instructions.md  shell.instructions.md  typescript.instructions.md
.github/workflows/: agentlint.yml  biome.yml  claude-code-review.yml  claude-pr-review.yml  claude.yml  claudelint.yml  copilot-setup-steps.yml  dependabot-automerge.yml  droid-review.yml  droid.yml  jules-bug-fixer.yml  jules-ci-failure-fix.yml  jules-cleanup.yml  jules-performance-improver.yml  letta.yml  lint.yml  ruff.yml
.kilo/: .gitignore  kilo.json  kilo.jsonc
.kilo/rules/: architecture.md  code-style.md  security.md  testing.md
.kilocode/: .gitignore  config.json  mcp.json
.mise/tasks/: format  lint
.opencode/: .gitignore  AGENTS.md  command  opencode.json  opencode.jsonc  plugin  rate-limit-fallback.json  skill
.serena/: project.yml  serena_config.yml
.workflow/links-and-references-plan/: 01-exploration.md
claude/: .lsp.json  .mcp.json  AGENTS.md  CLAUDE.md  README.md  TODO.md  agent.sh  claude-select.sh  codemap.md  env-setup.sh  mcp.json  minimax.sh  openrouter.sh  reference_legacy_config.md  resources.md  settings.json  setup.sh  zai.sh
claude/.slim/: cartography.json
claude/agents/: bash-pro.md  ci-cd-expert.md  claude-md-auditor.md  claudemd.md  code-explorer.md  code-simplifier.md  codebase-pattern-finder.md  codemap.md  context-architect.md  context-manager.md  docker-expert.md  docker-optimize.md  docker-specialist.md  dx-optimizer.md  general-purpose.md  improve-agent.md  janitor.md  javascript-pro.md  language-expert.md  llm-boost.md  maintenance.md  markdown-optimizer.md  mcp-expert.md  merge-supervisor.md  optimizer.md  prd.md  prompt-optimizer.agents.md  rust-pro.md  (+10 more)
copilot/: mcp.json
copilot-cli/: README.md  aliases.sh  config.json  copilot-instructions.md  mcp.json  setup.sh
cursor/: .gitignore  README.md  mcp.json
docs/: external-integration-triage.md
examples/: README.md  cli_examples.md  example_usage.js  example_usage.py
gemini/: README.md  settings.json  setup.sh
kilo/: custom_modes.yaml
kilo-tools/: compose.ts  index.ts  package.json  tsconfig.json
kilocode/: README.md  config.json  custom_modes.yaml  kilo.jsonc
opencode/: .env  .gitignore  AGENTS.md  MODELS.md  PLUGINS.md  README.md  TODO.md  cclsp.json  config.json  dcp.jsonc  oh-my-opencode-slim.json  opencode-tmux.sh  opencode.json  opencode.jsonc  opencode2.json  package.json  tsconfig.json  tui.json
opencode-remote/: .dockerignore  .env.example  Makefile  PLAN.md  README.md  TODO.md  TODO2.md  docker-compose.opencode-container.yml  docker-compose.yml  install-local.sh  install.sh  setup.sh
pi/: TODO.md
plugins/dynamic-mcp-router/: mcp_router.py  my_custom_mcp_server.py  pyproject.toml  requirements.txt
prompts/: design-cleanup.md  design-finisher.md  design-smooth.md  implement-plan.md
qwen/: README.md  system-prompt.md
zeroclaw/: README.md
(+940 files in other folders)
